# doc_intelligence

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
backend/: config.py  main.py  schemas.py
backend/classification/: __init__.py  calibration.py  model.py  router.py
backend/encoding/: __init__.py  fusion.py  text_encoder.py
backend/ingestion/: __init__.py  detector.py  extractor.py  models.py  ocr.py
backend/layout/: __init__.py  graph_builder.py  graph_encoder.py  reading_order.py
backend/monitoring/: drift.py  metrics.py
backend/ood/: __init__.py  energy.py  ensemble.py  mahalanobis.py
backend/serving/: __init__.py  batcher.py  service.py
backend/training/: Train.py  dataset.py  losses.py  trainer.py
docs/: deployment.md
frontend/: app.py  dockerfile  requirements.txt
scripts/: train.py
tests/: conftest.py  test_calibration.py  test_encoding.py  test_ingestion.py  test_layout.py  test_monitoring.py  test_ood.py  test_serving.py
