[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-intelligence"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # 🔥 CPU-only PyTorch (critical fix)
    "torch==2.2.2",

    # ⚠️ keep ONLY if you really use graph model
    "torch-geometric>=2.5",

    "sentence-transformers>=3.0",
    "transformers>=4.41",

    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "pytesseract>=0.3.10",
    "Pillow>=10.3",
    "python-magic>=0.4.27",

    "scipy>=1.13",
    "scikit-learn>=1.5",
    "numpy>=1.26",

    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]

# 🔥 frontend separated (important)
frontend = [
    "streamlit>=1.35",
]

dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "fpdf2>=2.7",
    "wandb>=0.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "backend*", "frontend*", "layout*", "encoding*", "ood*",
    "classification*", "serving*", "training*", "monitoring*",
    "ingestion*", "scripts*", "tests*"
]
